--- a/eim-dao/pom.xml
+++ b/eim-dao/pom.xml
@@ -10,5 +10,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.eim</groupId>
+            <artifactId>eim-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
