--- a/eim-service/pom.xml
+++ b/eim-service/pom.xml
@@ -10,6 +10,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.eim</groupId>
+            <artifactId>eim-dao</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
