--- a/eim-web/src/main/resources/application.yml
+++ b/eim-web/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     default:
-      username: eptos
-      password: eptos123
-      url: jdbc:mysql://10.170.20.135:3306/eptosdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+      username: yyxn
+      password: yyxn123
+      url: jdbc:mysql://10.170.20.135:3306/yyxndb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
       driver-class-name: com.mysql.cj.jdbc.Driver
       type: com.alibaba.druid.pool.DruidDataSource
       #Spring Boot 默认是不注入这些属性值的，需要自己绑定
