--- a/eim-oauth/pom.xml
+++ b/eim-oauth/pom.xml
@@ -11,6 +11,15 @@
   <artifactId>eim-oauth</artifactId>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security.oauth</groupId>
+      <artifactId>spring-security-oauth2</artifactId>
+    </dependency>
 
   </dependencies>
 </project>
