--- a/eim-web/pom.xml
+++ b/eim-web/pom.xml
@@ -18,5 +18,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.eim</groupId>
+            <artifactId>eim-oauth</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
