--- a/eim-web/src/main/resources/application.yml
+++ b/eim-web/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
   port: 8080
-  servlet:
-    context-path: /eim-serv
+  #servlet:
+  #  context-path: /eim-serv
 
 spring:
   datasource:
     default:
-      username: yyxn
-      password: yyxn123
-      url: jdbc:mysql://10.170.20.135:3306/yyxndb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+      username: ruyoo
+      password: ruyoo123
+      url: jdbc:mysql://10.170.20.135:3306/ruyoodb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
       driver-class-name: com.mysql.cj.jdbc.Driver
       type: com.alibaba.druid.pool.DruidDataSource
       #Spring Boot 默认是不注入这些属性值的，需要自己绑定
@@ -65,3 +65,14 @@ spring:
       useGlobalDataSourceStat: true
       #通过connectProperties属性来打开mergeSql功能；慢SQL记录
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+jwt:
+  route:
+    authentication:
+      path: /auth
+  header: Authorization
+  expiration: 604800
+  secret: $=sec@ret%#
+
+mybatis:
+  mapper-locations: classpath*:mapper/**/*.xml
