--- a/eim-oauth/pom.xml
+++ b/eim-oauth/pom.xml
@@ -11,23 +11,17 @@
   <artifactId>eim-oauth</artifactId>
 
   <dependencies>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt</artifactId>
-      <version>0.9.1</version>
-    </dependency>
       <dependency>
           <groupId>com.eim</groupId>
           <artifactId>eim-dao</artifactId>
           <version>0.0.1-SNAPSHOT</version>
           <scope>compile</scope>
       </dependency>
-
+      <dependency>
+          <groupId>com.eim</groupId>
+          <artifactId>eim-utils</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
