文件上传实现

--- a/eim-web/src/main/resources/application.yml
+++ b/eim-web/src/main/resources/application.yml
@@ -66,6 +66,17 @@ spring:
       #通过connectProperties属性来打开mergeSql功能；慢SQL记录
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
+file:
+  store:
+    #本地存储还是FTP存在（L：本地，F：FTP）
+    type: F
+    local: d:/fiel_root
+      ftp:
+       host: 10.170.20.135
+       user: chendh
+        pwd: chendh123
+       path: /
+
 jwt:
   route:
     authentication:
