--- a/pom.xml
+++ b/pom.xml
@@ -132,13 +132,11 @@
             <version>1.2.72</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/log4j/log4j
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.6</version>
         </dependency>
- -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
